--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "craco-alias": "^3.0.1",
     "dotenv": "^8.2.0",
+    "emotion-reset": "^3.0.1",
+    "gravatar": "^1.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
