--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.4",
     "craco-alias": "^3.0.1",
     "dotenv": "^8.2.0",
     "emotion-reset": "^3.0.1",
@@ -21,6 +22,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "swr": "^1.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
