--- a/dev/src/main/resources/application.yml
+++ b/dev/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: testest10222@gmail.com
-    password: test1234!
+    username: 
+    password: 
     properties:
       mail:
         smtp:
